# agentic-trading-research-bot

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  config_ui.py  http_client.py  index.html  main.py  monitor_common.py  pyproject.toml  registry.py  screener_common.py  setup.sh
.claude/: settings.json
.githooks/: pre-commit
cboe_options/: catalog.py  db.py  fetch.py  run.py
cboe_stats/: catalog.py  db.py  fetch.py  run.py
cftc_screener/: catalog.py  db.py  fetch.py  run.py
deploy/: com.agentic-trading-bot.schedule.plist  schedule-tick.sh
docs/: BACKLOG.md  CLAUDE_ROADMAP.md  DEFENSES_ROADMAP.md  DEPLOYMENT_ROADMAP.md  DEVELOPMENT.md  FOLLOWUPS.md  GLOSSARY.md  PIPELINE_ROADMAP.md  ROADMAP.md  SCHEDULE.md  SOURCES_ROADMAP.md  stockanalysis_data_json_catalog.md
earnings_calendar/: db.py  fetch.py  run.py
econ_calendar/: catalog.py  db.py  fetch.py  run.py
edgar_screener/: db.py  fetch.py  run.py
eia_screener/: catalog.py  db.py  fetch.py  run.py
finra_ats/: db.py  fetch.py  run.py
finra_short_interest/: db.py  fetch.py  run.py
finra_short_volume/: db.py  fetch.py  run.py
fomc_calendar/: db.py  fetch.py  run.py
fred_screener/: catalog.py  db.py  fetch.py  run.py
ftd_screener/: db.py  fetch.py  run.py
market_calendar/: catalog.py  compute.py  db.py  fetch.py  run.py
nyfed_screener/: catalog.py  db.py  fetch.py  run.py
plans/: 000-price-ledger-off-by-one-session.md  001-composite-options-annotation.md  001-price-ledger-backfill-spike.md  001-robinhood-mcp-integration.md  002-earnings-proximity-gate.md  README.md  (+5 more)
(+475 files in other folders)
